--- a/index.html
+++ b/index.html
@@ -3,200 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prep List Template</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>La Taqueria BOH</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-
   <body>
-    <header>
-        <h1>🌮 Prep List 🌯</h1>
-        <p>Please input the actual quantity of each one</p>
-    </header>  
+    <h1>🌮 La Taqueria mas Chingona 🌮</h1>
+    <br />
+    <div class="mainMenu">
+      <a href="./prepList.html"><h3>PrepList 🍅🧅</h3></a>
 
-    <form class="contact-form">
-      <h4>Fridge</h4>
-      <label for="picoDeGallo">Pico de Gallo 🍅🧅🌿</label>
-      <input id="picoDeGallo" type="number" placeholder=""/><br />
+      <a href="./temperatures.html"><h3>Temperatures Checklist 🌡</h3></a>
 
-      <label for="onionCilantro">Onion and Cilantro 🧅🌿</label>
-      <input id="onionCilantro" type="number" placeholder="" /><br />
+      <a href="./waste.html"><h3>Waste List 🗑</h3></a>
 
-      <label for="cilantro">Cilantro 🌿</label>
-      <input id="cilantro" type="number" placeholder="" /><br />
-
-      <label for="avocado">Avocado Base 🥑</label>
-      <input id="avocado" type="number" placeholder="" /><br />
-
-      <label for="pineapple">Pineapple 🍍</label>
-      <input id="pineapple" type="number" placeholder="" /><br />
-
-      <label for="pickledOnion">Pickled Onion 💜</label>
-      <input id="pickledOnion" type="number" placeholder="" /><br />
-
-      <label for="fetaCheese">Feta Cheese </label>
-      <input id="fetaCheese" type="number" placeholder="" /><br />
-
-      <label for="lettuce">Chopped Lettuce 🥬</label>
-      <input id="lettuce" type="number" placeholder="" /><br />
-
-      <label for="cabagge">Cagabe Slaw 🥗</label>
-      <input id="cabagge" type="number" placeholder="" /><br />
-
-      <label for="salsaVerde">Salsa Verde 🟢</label>
-      <input id="salsaVerde" type="number" placeholder="" /><br />
-
-      <label for="salsaCruda">Salsa Cruda 🔴</label>
-      <input id="salsaCruda" type="number" placeholder="" /><br />
-
-      <label for="anchoMiel">Ancho Miel 🟤</label>
-      <input id="anchoMiel" type="number" placeholder="" /><br />
-
-      <label for="birriamenCilantro">Birriamen Cilantro 🍜🌿</label>
-      <input id="birriamenCilantro" type="number" placeholder="" /><br />
-
-      <label for="birriamenOnion">Birriamen Onion 🍜🧅</label>
-      <input id="birriamenOnion" type="number" placeholder="" /><br />
-
-      <h4>Cheese</h4>
-      <label for="mozza100">Mozzarella 100gr</label>
-      <input id="mozza100" type="number" placeholder="" /><br />
-
-      <label for="mozza150">Mozzarella 150gr</label>
-      <input id="mozza150" type="number" placeholder="" /><br />
-
-      <label for="nachoCheese">Nacho Cheese</label>
-      <input id="nachoCheese" type="number" placeholder="" /><br />
-
-      <label for="mozza1l">Mozza 1lt Container</label>
-      <input id="mozza1l" type="number" placeholder="" /><br />
-
-      <h4>Bottles</h4>
-      <label for="anchoBottle">Ancho Miel  </label>
-      <input id="anchoBottle" type="number" placeholder="" /><br />
-
-      <label for="chipotle">Chipotle Mayo</label>
-      <input id="chipotle" type="number" placeholder="" /><br />
-
-      <label for="cream">Cream</label>
-      <input id="cream" type="number" placeholder="" /><br />
-
-      <label for="beans">Beans Bottle</label>
-      <input id="beans" type="number" placeholder="" /><br />
-
-      <label for="cajeta">Cajeta</label>
-      <input id="cajeta" type="number" placeholder="" /><br />
-
-      <h4>Proteins</h4>
-      <label for="chicken">Crispy Chicken 🍗</label>
-      <input id="chicken" type="number" placeholder="" /><br />
-
-      <label for="potato">Potato Tots  🥔</label>
-      <input id="potato" type="number" placeholder="" /><br />
-
-      <label for="tuna">Tuna 🐟</label>
-      <input id="tuna" type="number" placeholder="" /><br />
-
-      <label for="yam">Yam 🍠</label>
-      <input id="yam" type="number" placeholder="" /><br />
-
-      <label for="cauli">Cauliflower 🥦</label>
-      <input id="cauli" type="number" placeholder="" /><br />
-
-      <label for="fish">Fish Baja 🎣</label>
-      <input id="fish" type="number" placeholder="" /><br />
-
-      <label for="cabo">Cabo Shrimp 🍤</label>
-      <input id="cabo" type="number" placeholder="" /><br />
-
-      <label for="asada">Asada 🥩</label>
-      <input id="asada" type="number" placeholder="" /><br />
-
-      <h4>Others</h4>
-      <label for="eggs">Poached Eggs 🥚</label>
-      <input id="eggs" type="number" placeholder="" /><br />
-
-      <label for="dryOnion">Dry Onion and Cabbage</label>
-      <input id="dryOnion" type="number" placeholder="" /><br />
-
-      <label for="paprika">Paprika and salt mix</label>
-      <input id="paprika" type="number" placeholder="" /><br />
-
-      <label for="cinnamon">Cinnamon and Sugar</label>
-      <input id="cinnamon" type="number" placeholder="" /><br />
-
-      <label for="plainCabbage">Plain Cabagge</label>
-      <input id="plainCabbage" type="number" placeholder="" /><br />
-
-      <label for="encurtido">Encurtido Chino</label>
-      <input id="encurtido" type="number" placeholder="" /><br />
-
-      <label for="tortillaChips">Tortilla Chips</label>
-      <input id="tortillaChips" type="number" placeholder="" /><br />
-
-      <label for="nachos">Nachos</label>
-      <input id="nachos" type="number" placeholder="" /><br />
-
-      <label for="horchata">Horchata</label>
-      <input id="horchata" type="number" placeholder="" /><br />
-
-      <label for="aguaJamaica">Agua de Jamaica</label>
-      <input id="aguaJamaica" type="number" placeholder="" /><br />
-
-      <button type="button" onclick="calc()">Calc Prep 🧮</button>
-    </form>
-
-    <div >
-        <h2>Result</h2>
-        <div id="rPicoDeGallo"></div>
-        <div id="rOnionCilantro"></div>
-        <div id="rCilantro"></div>
-        <div id="rAvocado"></div>
-        <div id="rPineapple"></div>
-        <div id="rPickelOnion"></div>
-        <div id="rFetaCheese"></div>
-        <div id="rLettuce"></div>
-        <div id="rCabbage"></div>
-        <div id="rSalsaVerde"></div>
-        <div id="rSalsaCruda"></div>
-        <div id="rAnchoMiel"></div>
-        <div id="rBCilantro"></div>
-        <div id="rBOnion"></div>
-
-        <div id="rM100"></div>
-        <div id="rM150"></div>
-        <div id="rM1l"></div>
-        <div id="rNachoCheese"></div>
-
-        <div id="rAnchoBottle"></div>  
-        <div id="rChipotle"></div>
-        <div id="rCream"></div>
-        <div id="rBeans"></div>
-        <div id="rCajeta"></div>
-
-        <div id="rChicken"></div>
-        <div id="rPotato"></div>
-        <div id="rTuna"></div>
-        <div id="rYam"></div>
-        <div id="rCauli"></div>
-        <div id="rFish"></div>
-        <div id="rCabo"></div>
-        <div id="rAsada"></div>
-
-        <div id="rEggs"></div>
-        <div id="rDry"></div>
-        <div id="rPaprika"></div>
-        <div id="rCinnamon"></div>
-        <div id="rPlainCabbage"></div>
-        <div id="rEncurtido"></div>
-        <div id="rTortillaChips"></div>
-        <div id="rNachos"></div>
-        <div id="rHorchata"></div>
-        <div id="rJamaica"></div>
-
-        
-      </div>
-
-    <script src='script.js'></script>
+      <a href="./checklist.html"><h3>Daily Checklist ☑️</h3></a>
+    </div>
   </body>
 </html>
